@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-12-22T12:22:30Z",
-  "count_outdated" : 5457,
-  "uniques_outdated" : 3051,
+  "timestamp" : "2025-12-23T00:54:07Z",
+  "count_outdated" : 5460,
+  "uniques_outdated" : 3054,
   "count" : 5546,
   "uniques" : 3114,
   "clones" : [
-    {
-      "timestamp": "2025-12-08T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 3 ],
-      "count_decinc": [ 2, 3 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 3 ],
-      "uniques_decinc": [ 2, 3 ]
-    },
     {
       "timestamp": "2025-12-09T00:00:00Z",
       "count": 14,
