@@ -1,12 +1,7 @@
 {
-  "count": 87,
-  "uniques": 54,
+  "count": 86,
+  "uniques": 53,
   "clones": [
-    {
-      "timestamp": "2025-12-08T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2025-12-09T00:00:00Z",
       "count": 14,
